if (ENABLE_WEBKIT2)
    add_subdirectory(WebKitTestRunner)
endif ()

if ("${PORT}" STREQUAL "Efl")
    add_subdirectory(EWebLauncher/ControlTheme)

    if (ENABLE_WEBKIT)
        add_subdirectory(DumpRenderTree/efl)
        add_subdirectory(EWebLauncher)
    endif ()

    if (ENABLE_WEBKIT2)
        add_subdirectory(MiniBrowser/efl)
    endif ()
    add_subdirectory(DumpRenderTree/TestNetscapePlugIn)
elseif ("${PORT}" STREQUAL "WinCE")
    add_subdirectory(WinCELauncher)
elseif ("${PORT}" STREQUAL "Nix" AND NOT WTF_USE_OPENGL_ES_2)
    add_subdirectory(MiniBrowser/nix)
endif ()

if (ENABLE_WEBKIT2 AND ENABLE_API_TESTS)
    add_subdirectory(TestWebKitAPI)
endif ()
