WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS()

IF (SHARED_CORE)
	SET(Platform_LIBRARY_TYPE SHARED)
	ADD_LIBRARY(${Platform_LIBRARY_NAME} ${Platform_LIBRARY_TYPE} ${Platform_SOURCES})

	SET_TARGET_PROPERTIES(${Platform_LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
	SET_TARGET_PROPERTIES(${Platform_LIBRARY_NAME} PROPERTIES FOLDER "Platform")
	SET_TARGET_PROPERTIES(${Platform_LIBRARY_NAME} PROPERTIES LINK_INTERFACE_LIBRARIES "")
	SET_TARGET_PROPERTIES(${Platform_LIBRARY_NAME} PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})

	LIST(APPEND WebCore_LIBRARIES
        ${Platform_LIBRARY_NAME}
    )

    INSTALL(TARGETS ${Platform_LIBRARY_NAME} DESTINATION "${LIB_INSTALL_DIR}")
ENDIF ()
